--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@ MENU
     <section class="covid-19">
        <div id="particles-js"></div>
         <div class="container">
-            <div class="covid-top-content">
+            <div class="covid-top-content wow zoomIn">
                 <h2>What <b>banks offer as debt relief versus what Debt Breakers</b> can offer during</h2>
                 <h1>COVID-19</h1>
                 <p>South African banks have made various services available to assist consumers during this extremely financially challenging time, but are these services really the long-term solution to financially stressed consumers? We made comparisons to what banks offer and what Debt Breakers offer. Our solution immediately releases cashflow with guaranteed reduced interest rates (sometimes as low as 0% interest)</p>
             </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 wow slideInLeft">
                    <div class="list list-banks">
                     <h3>Banks</h3>
                     <ul>
@@ -313,7 +313,7 @@ MENU
                     </ul>
                    </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6  wow slideInRight">
                    <div class="list list-breakers">
                     <h3>Debt Breakers</h3>
                     <ul>
@@ -1104,8 +1104,11 @@ MENU
   <script src="https://debtbreakers.co.za/onepage/js/owl.carousel.min.js"></script>
   <script src="https://debtbreakers.co.za/onepage/js/script.js"></script>
   <script src="https://debtbreakers.co.za/onepage/js/debt-calculator.js"></script>
-  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-
+  <script src="onepage/js/particles.min.js"></script>
+    <script>
+    
+        particlesJS("particles-js", {"particles":{"number":{"value":100,"density":{"enable":true,"value_area":800}},"color":{"value":"#ff6800"},"shape":{"type":"circle","stroke":{"width":0,"color":"#000000"},"polygon":{"nb_sides":5},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":.5,"random":true,"anim":{"enable":false,"speed":1.3586413586413588,"opacity_min":0.1,"sync":false}},"size":{"value":6,"random":true,"anim":{"enable":false,"speed":40,"size_min":0.1,"sync":false}},"line_linked":{"enable":true,"distance":100,"color":"#ffffff","opacity":0.4,"width":2},"move":{"enable":true,"speed":3,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":true,"mode":"grab"},"onclick":{"enable":true,"mode":"push"},"resize":true},"modes":{"grab":{"distance":150,"line_linked":{"opacity":0.5585642470311099}},"bubble":{"distance":400,"size":40,"duration":2,"opacity":8,"speed":3},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});var count_particles, stats, update; stats = new Stats; stats.setMode(0); stats.domElement.style.position = 'absolute'; stats.domElement.style.left = '0px'; stats.domElement.style.top = '0px'; document.body.appendChild(stats.domElement); count_particles = document.querySelector('.js-count-particles'); update = function() { stats.begin(); stats.end(); if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) { count_particles.innerText = window.pJSDom[0].pJS.particles.array.length; } requestAnimationFrame(update); }; requestAnimationFrame(update);;
+    </script>
   <script>
     $(document).ready(function() {
       $('#myModal').modal('show');
@@ -1408,10 +1411,7 @@ MENU
       }
     })
   </script>
-  <script>
-    
-    particlesJS("particles-js", {"particles":{"number":{"value":100,"density":{"enable":true,"value_area":800}},"color":{"value":"#ff6800"},"shape":{"type":"circle","stroke":{"width":0,"color":"#000000"},"polygon":{"nb_sides":5},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":.5,"random":true,"anim":{"enable":false,"speed":1.3586413586413588,"opacity_min":0.1,"sync":false}},"size":{"value":6,"random":true,"anim":{"enable":false,"speed":40,"size_min":0.1,"sync":false}},"line_linked":{"enable":true,"distance":100,"color":"#ffffff","opacity":0.4,"width":2},"move":{"enable":true,"speed":3,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":true,"mode":"grab"},"onclick":{"enable":true,"mode":"push"},"resize":true},"modes":{"grab":{"distance":150,"line_linked":{"opacity":0.5585642470311099}},"bubble":{"distance":400,"size":40,"duration":2,"opacity":8,"speed":3},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});var count_particles, stats, update; stats = new Stats; stats.setMode(0); stats.domElement.style.position = 'absolute'; stats.domElement.style.left = '0px'; stats.domElement.style.top = '0px'; document.body.appendChild(stats.domElement); count_particles = document.querySelector('.js-count-particles'); update = function() { stats.begin(); stats.end(); if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) { count_particles.innerText = window.pJSDom[0].pJS.particles.array.length; } requestAnimationFrame(update); }; requestAnimationFrame(update);;
-    </script>
+  
 </body>
 <!-- <script>
 var myVar;
