--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ MENU
                 <p>South African banks have made various services available to assist consumers during this extremely financially challenging time, but are these services really the long-term solution to financially stressed consumers? We made comparisons to what banks offer and what Debt Breakers offer. Our solution immediately releases cashflow with guaranteed reduced interest rates (sometimes as low as 0% interest)</p>
             </div>
             <div class="row">
-                <div class="col-md-6 wow slideInLeft">
+                <div class="col-md-6 wow slideInUp">
                    <div class="list list-banks">
                     <h3>Banks</h3>
                     <ul>
@@ -313,7 +313,7 @@ MENU
                     </ul>
                    </div>
                 </div>
-                <div class="col-md-6  wow slideInRight">
+                <div class="col-md-6  wow slideInUp">
                    <div class="list list-breakers">
                     <h3>Debt Breakers</h3>
                     <ul>
