--- a/index2.html
+++ b/index2.html
@@ -339,6 +339,7 @@ MENU
                     </div>
                 </div>
             </div>
+            <p class="pt-5 mb-0 pb-0 wow slideInUp">You don`t negotiate with banks, we negotiate on your behalf and enforce the rules and guidelines of the NCR. Banks are offering temporary relief, Debt Breakers guarantees permanent relief.</p>
         </div>
     </section>    
     
